--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/language-server": "^0.14.16",
     "@tailwindcss/vite": "^4.1.5",
     "autoprefixer": "^10.4.21",
+    "fullpage.js": "^4.0.35",
     "gsap": "^3.13.0",
     "nuxt": "^3.17.2",
     "postcss": "^8.5.3",
